fix(css): remove scroll on landing-filter-container for laptop, tablet, and larger screens; adjust outer margin on mobile

--- a/client/src/components/landing/what-will-you-learn/filter/course-filter.css
+++ b/client/src/components/landing/what-will-you-learn/filter/course-filter.css
@@ -6,7 +6,7 @@
 .landing-filter-container ul {
   display: flex;
   justify-content: space-between;
-  overflow-x: scroll;
+  /* overflow-x: scroll; */
 }
 
 .landing-filter-container ul button {
@@ -18,6 +18,7 @@
   color: red;
   border-bottom: red 3px solid;
   font-weight: bold;
+  margin: 0.1rem;
 }
 
 @media (max-width: 768px) {
@@ -25,6 +26,7 @@
     display: flex;
     overflow-x: auto;
     padding: 0.5rem;
+    margin: 0.5rem;
     /* Empêcher différents éléments de passer à la ligne suivante */
     white-space: nowrap;
   }
